[project]
name = "test-sprite-agent"
version = "0.1.0"
description = "Autonomous AI-powered browser testing agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "langgraph>=0.0.10",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-playwright>=0.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--headed --slowmo 1000"
testpaths = ["tests"]
